--- a/ffmpegwindow.ui
+++ b/ffmpegwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>407</width>
-    <height>497</height>
+    <width>414</width>
+    <height>559</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>90</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>130</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -44,7 +44,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>10</y>
+      <y>80</y>
       <width>93</width>
       <height>31</height>
      </rect>
@@ -57,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>50</y>
+      <y>120</y>
       <width>93</width>
       <height>31</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>110</y>
+      <y>180</y>
       <width>381</width>
       <height>101</height>
      </rect>
@@ -79,15 +79,15 @@
      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:7.8pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelEndTime">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
+      <y>330</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -100,7 +100,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>220</y>
+      <y>290</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -113,7 +113,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>320</y>
+      <y>390</y>
       <width>381</width>
       <height>71</height>
      </rect>
@@ -123,7 +123,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>90</y>
+      <y>160</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -136,7 +136,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>300</y>
+      <y>370</y>
       <width>221</width>
       <height>16</height>
      </rect>
@@ -149,7 +149,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>220</y>
+      <y>290</y>
       <width>311</width>
       <height>22</height>
      </rect>
@@ -165,7 +165,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>260</y>
+      <y>330</y>
       <width>311</width>
       <height>22</height>
      </rect>
@@ -184,7 +184,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>10</y>
+      <y>80</y>
       <width>211</width>
       <height>31</height>
      </rect>
@@ -194,7 +194,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>50</y>
+      <y>120</y>
       <width>211</width>
       <height>31</height>
      </rect>
@@ -204,7 +204,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>280</y>
+      <y>350</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -220,7 +220,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>240</y>
+      <y>310</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -236,7 +236,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>400</y>
+      <y>470</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -245,14 +245,54 @@ p, li { white-space: pre-wrap; }
      <string>Copy to clipboard</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>261</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>261</width>
+      <height>31</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>FFMPEG video cutter</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>361</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Install FFMPEG, select the input file, output file, start and end time and the command to cut the video will be outputed in the corresponding field</string>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>407</width>
-     <height>26</height>
+     <width>414</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
