--- a/ffmpegwindow.ui
+++ b/ffmpegwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>414</width>
-    <height>559</height>
+    <width>415</width>
+    <height>587</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>90</y>
+      <y>100</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>130</y>
+      <y>140</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -44,7 +44,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>80</y>
+      <y>90</y>
       <width>93</width>
       <height>31</height>
      </rect>
@@ -57,7 +57,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>120</y>
+      <y>130</y>
       <width>93</width>
       <height>31</height>
      </rect>
@@ -70,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>180</y>
+      <y>210</y>
       <width>381</width>
       <height>101</height>
      </rect>
@@ -87,7 +87,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>330</y>
+      <y>360</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -100,7 +100,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
+      <y>320</y>
       <width>71</width>
       <height>16</height>
      </rect>
@@ -113,7 +113,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>390</y>
+      <y>420</y>
       <width>381</width>
       <height>71</height>
      </rect>
@@ -123,7 +123,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
+      <y>190</y>
       <width>101</width>
       <height>16</height>
      </rect>
@@ -136,7 +136,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>370</y>
+      <y>400</y>
       <width>221</width>
       <height>16</height>
      </rect>
@@ -149,7 +149,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>290</y>
+      <y>320</y>
       <width>311</width>
       <height>22</height>
      </rect>
@@ -165,7 +165,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>330</y>
+      <y>360</y>
       <width>311</width>
       <height>22</height>
      </rect>
@@ -184,7 +184,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>80</y>
+      <y>90</y>
       <width>211</width>
       <height>31</height>
      </rect>
@@ -194,7 +194,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>120</y>
+      <y>130</y>
       <width>211</width>
       <height>31</height>
      </rect>
@@ -204,7 +204,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>350</y>
+      <y>380</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -220,7 +220,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>310</y>
+      <y>340</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -236,7 +236,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>470</y>
+      <y>500</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -245,7 +245,7 @@ p, li { white-space: pre-wrap; }
      <string>Copy to clipboard</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="labelTitle">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -269,11 +269,11 @@ p, li { white-space: pre-wrap; }
      <string>FFMPEG video cutter</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="labelDescription">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
+      <y>50</y>
       <width>361</width>
       <height>31</height>
      </rect>
@@ -285,13 +285,26 @@ p, li { white-space: pre-wrap; }
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="labelOutputFileExists">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>170</y>
+      <width>311</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>414</width>
+     <width>415</width>
      <height>26</height>
     </rect>
    </property>
